# accu-oxford-2019

./: .gitignore  README.md  conda.txt  proposal.txt  reveal.txt
demo1/: CMakeLists.txt
demo1/benchmark_demo/: CMakeLists.txt  main.cpp  variant_visit.cpp  variant_visit.hpp  virtualfn.cpp  virtualfn.hpp
demo1/benchmark_lib/: CMakeLists.txt  baseline.cpp  exception.cpp
demo1/demo/: CMakeLists.txt  main.cpp
demo1/src/: CMakeLists.txt  constant.cpp  demo_eval.cpp  demo_print.cpp  minus.cpp  plus.cpp
demo1/src/include/: constant.hpp  eval_ops.hpp  expr.hpp  invoke_operation.hpp  minus.hpp  operation.hpp  operation_definitions.hpp  plus.hpp  print_ops.hpp
demo2/: CMakeLists.txt
demo2/benchmark_demo/: CMakeLists.txt  main.cpp
demo2/benchmark_demo3/: CMakeLists.txt  main.cpp
demo2/benchmark_demo4/: CMakeLists.txt  main.cpp
demo2/benchmark_lib/: baseline.hpp  exception.hpp
demo2/demo/: CMakeLists.txt  main.cpp
demo2/demo3/: CMakeLists.txt  main.cpp
demo2/demo3_lib/: CMakeLists.txt  constant.cpp  demo_eval.cpp  demo_print.cpp  minus.cpp  plus.cpp
demo2/demo3_lib/include/: constant.hpp  expr.hpp  expr_impl.hpp  minus.hpp  plus.hpp
demo2/demo4/: CMakeLists.txt  main.cpp
demo2/demo4_lib/: CMakeLists.txt  constant.cpp  demo_eval.cpp  demo_print.cpp  minus.cpp  plus.cpp
demo2/demo4_lib/include/: constant.hpp  expr.hpp  minus.hpp  plus.hpp
demo2/src/: CMakeLists.txt  constant.cpp  demo_eval.cpp  demo_print.cpp  minus.cpp  plus.cpp
demo2/src/include/: constant.hpp  expr.hpp  minus.hpp  plus.hpp
demo2/typelist/: CMakeLists.txt  typelist.cpp
demo2/typelist/include/: typelist.hpp
presentation/: benchmarks.xlsx  bm1.csv  bm2.csv
presentation/reveal.js/: index.html
presentation/reveal.js/css/theme/: league.css
